# axe

./: .gitignore  AXE_ARCHITECTURE.md  AXE_TASKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  build.rs  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
axe-config/: Cargo.toml
axe-config/src/: lib.rs  theme.rs
axe-core/: Cargo.toml
axe-core/src/: app.rs  code_actions.rs  command.rs  command_palette.rs  completion.rs  file_finder.rs  fuzzy.rs  git.rs  hover.rs  inlay.rs  keymap.rs  lib.rs  location_list.rs  project_search.rs  rename.rs  search.rs  session.rs  signature_help.rs  ssh_host.rs  ssh_host_finder.rs
axe-core/src/ai_overlay/: detect.rs  mod.rs  registry.rs
axe-core/src/app/: ai_overlay.rs  clipboard.rs  diff_popup.rs  editor.rs  editor_layout.rs  execute.rs  git.rs  input.rs  layout.rs  lsp.rs  mod.rs  terminal.rs  tests.rs  tree.rs  types.rs
axe-editor/: Cargo.toml
axe-editor/queries/bash/: highlights.scm
axe-editor/queries/c/: highlights.scm
axe-editor/queries/cpp/: highlights.scm
axe-editor/queries/css/: highlights.scm
axe-editor/queries/go/: highlights.scm
axe-editor/queries/hcl/: highlights.scm
axe-editor/queries/html/: highlights.scm
axe-editor/queries/javascript/: highlights.scm
axe-editor/queries/json/: highlights.scm
axe-editor/queries/markdown/: highlights.scm
axe-editor/queries/python/: highlights.scm
axe-editor/queries/rust/: highlights.scm
axe-editor/queries/toml/: highlights.scm
axe-editor/queries/tsx/: highlights.scm
axe-editor/queries/typescript/: highlights.scm
axe-editor/src/: buffer.rs  buffer_manager.rs  cursor.rs  cursors.rs  diagnostic.rs  diff.rs  highlight.rs  history.rs  languages.rs  lib.rs  selection.rs
axe-editor/src/buffer/: cursor.rs  editing.rs  highlighting.rs  mod.rs  scrolling.rs  selection.rs  tests.rs
axe-lsp/: Cargo.toml
axe-lsp/src/: client.rs  language.rs  lib.rs  manager.rs  transport.rs
axe-terminal/: Cargo.toml
axe-terminal/src/: cwd_parser.rs  event_listener.rs  input.rs  lib.rs  manager.rs  pty.rs  ssh_connect.rs  ssh_tab.rs  tab.rs
axe-tree/: Cargo.toml
axe-tree/src/: filter.rs  icons.rs  lib.rs  watcher.rs
axe-ui/: Cargo.toml
axe-ui/src/: ai_overlay.rs  editor_panel.rs  inlay.rs  layout.rs  lib.rs  overlays.rs  status_bar.rs  terminal_panel.rs  tests.rs  theme.rs  tree_panel.rs
docs/: configuration.md
src/: main.rs
tests/: cli.rs
themes/: axe-dark.toml  axe-light.toml
