[workspace]
members = [
    "axe-core",
    "axe-config",
    "axe-editor",
    "axe-tree",
    "axe-terminal",
    "axe-lsp",
    "axe-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "axe"
version.workspace = true
edition.workspace = true

[dependencies]
axe-core = { path = "axe-core" }
axe-terminal = { path = "axe-terminal" }
axe-ui = { path = "axe-ui" }
axe-config = { path = "axe-config" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
log = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_28"] }
tokio = { version = "1", features = ["full"] }
