[package]
name = "axe-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
dirs = "6"
log = "0.4"
anyhow = "1"
tempfile = "3"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }

[dev-dependencies]
