[package]
name = "axe-core"
version.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal = "0.25"
axe-terminal = { path = "../axe-terminal" }
axe-tree = { path = "../axe-tree" }
crossterm = "0.28"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
