[package]
name = "axe-core"
version.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal = "0.25"
arboard = "3"
axe-config = { path = "../axe-config" }
axe-terminal = { path = "../axe-terminal" }
axe-editor = { path = "../axe-editor" }
axe-tree = { path = "../axe-tree" }
crossterm = "0.29"
ignore = "0.4"
nucleo-matcher = "0.3"
regex = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
