[package]
name = "axe-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ropey = "1"
anyhow = "1"
log = "0.4"
tempfile = "3"
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-md = "0.5"
tree-sitter-hcl = "1.1"

[dev-dependencies]
