[package]
name = "axe-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alacritty_terminal = "0.25"
anyhow = "1"
crossterm = "0.29"
dirs = "6"
log = "0.4"
portable-pty = "0.9"
russh = "0.60"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt"] }
vte = "0.15"
