[package]
name = "axe-tree"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
ignore = "0.4"
notify = "7"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
