[package]
name = "axe-ui"
version.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal = "0.25"
axe-core = { path = "../axe-core" }
axe-editor = { path = "../axe-editor" }
axe-terminal = { path = "../axe-terminal" }
axe-tree = { path = "../axe-tree" }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
