[package]
name = "axe-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alacritty_terminal = "0.25"
axe-config = { path = "../axe-config" }
axe-core = { path = "../axe-core" }
axe-editor = { path = "../axe-editor" }
axe-terminal = { path = "../axe-terminal" }
axe-tree = { path = "../axe-tree" }
log = "0.4"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
